@@ -4,15 +4,13 @@
 
 package com.agentclientprotocol.sdk.agent;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 /**
  * Builder for terminal command execution via the convenience API.
  *
  * <p>
- * This record allows configuring command execution with options like
+ * This class allows configuring command execution with options like
  * working directory, environment variables, and output limits.
  *
  * <p>
@@ -25,8 +23,8 @@ import java.util.Map;
  * CommandResult result = context.execute(
  *     Command.of("make", "build")
  *         .cwd("/workspace")
- *         .env(Map.of("DEBUG", "true"))
- *         .outputLimit(10000));
+ *         .env(Collections.singletonMap("DEBUG", "true"))
+ *         .outputByteLimit(10000));
  * }</pre>
  *
  * @author Mark Pollack
@@ -34,21 +32,14 @@ import java.util.Map;
  * @see SyncPromptContext#execute(Command)
  * @see PromptContext#execute(Command)
  */
-public class Command {
+public final class Command {
+
 	private final String executable;
 	private final List<String> args;
 	private final String cwd;
 	private final Map<String, String> env;
 	private final Long outputByteLimit;
 
-	/**
-	 *
-	 * @param executable      The command to execute
-	 * @param args            The arguments to pass to the command
-	 * @param cwd             The working directory (null for default)
-	 * @param env             Environment variables to set (null for default)
-	 * @param outputByteLimit Maximum bytes of output to capture (null for default)
-	 */
 	public Command(String executable, List<String> args, String cwd, Map<String, String> env, Long outputByteLimit) {
 		this.executable = executable;
 		this.args = args;
@@ -58,29 +49,28 @@ public class Command {
 	}
 
 	public String executable() {
-		return executable;
+		return this.executable;
 	}
 
 	public List<String> args() {
-		return args;
+		return this.args;
 	}
 
 	public String cwd() {
-		return cwd;
+		return this.cwd;
 	}
 
 	public Map<String, String> env() {
-		return env;
+		return this.env;
 	}
 
 	public Long outputByteLimit() {
-		return outputByteLimit;
+		return this.outputByteLimit;
 	}
 
 	/**
 	 * Creates a Command from command-line arguments.
 	 * The first argument is the executable, remaining arguments are passed as args.
-	 *
 	 * @param commandAndArgs The command and its arguments
 	 * @return A new Command instance
 	 */
@@ -92,13 +82,12 @@ public class Command {
 				commandAndArgs[0],
 				commandAndArgs.length > 1
 						? Arrays.asList(commandAndArgs).subList(1, commandAndArgs.length)
-						: Arrays.asList(),
+						: Collections.<String>emptyList(),
 				null, null, null);
 	}
 
 	/**
 	 * Returns a new Command with the specified working directory.
-	 *
 	 * @param cwd The working directory
 	 * @return A new Command with the working directory set
 	 */
@@ -108,7 +97,6 @@ public class Command {
 
 	/**
 	 * Returns a new Command with the specified environment variables.
-	 *
 	 * @param env The environment variables
 	 * @return A new Command with the environment variables set
 	 */
@@ -118,11 +106,32 @@ public class Command {
 
 	/**
 	 * Returns a new Command with the specified output byte limit.
-	 *
 	 * @param limit The maximum bytes of output to capture
 	 * @return A new Command with the output byte limit set
 	 */
 	public Command outputByteLimit(long limit) {
 		return new Command(executable, args, cwd, env, limit);
 	}
+
+	@Override
+	public boolean equals(Object o) {
+		if (this == o) return true;
+		if (o == null || getClass() != o.getClass()) return false;
+		Command that = (Command) o;
+		return Objects.equals(executable, that.executable) && Objects.equals(args, that.args)
+				&& Objects.equals(cwd, that.cwd) && Objects.equals(env, that.env)
+				&& Objects.equals(outputByteLimit, that.outputByteLimit);
+	}
+
+	@Override
+	public int hashCode() {
+		return Objects.hash(executable, args, cwd, env, outputByteLimit);
+	}
+
+	@Override
+	public String toString() {
+		return "Command[executable=" + executable + ", args=" + args + ", cwd=" + cwd
+				+ ", env=" + env + ", outputByteLimit=" + outputByteLimit + "]";
+	}
+
 }
